<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/mi_userType"
        android:orderInCategory="100"
        android:title="@string/user_type_user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_timer"
        android:orderInCategory="200"
        android:title=""
        app:showAsAction="always"
        android:actionViewClass="android.widget.TextView"/>
</menu>
