<resources>
    <string name="app_name">Testbox</string>
    <string name="user_type_user">User</string>
    <string name="user_type_editor">Editor</string>
    <string name="number_correct_answers">Correct answers</string>
    <string name="percent_number_correct_answers">Percent of correct answers</string>
    <string name="num_test_questions">Number of questions in the test</string>
    <string name="num_questions">Number of questions</string>
    <string name="test_time_limit">Test time</string>
    <string name="hours_short_name">hr</string>
    <string name="minutes_short_name">min</string>
    <string name="seconds_short_name">sec</string>
    <string name="question_text_empty">Should enter a question</string>
    <string name="btn_exam">Exam</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_ok">OK</string>
    <string name="btn_rollback">Ignore</string>
    <string name="btn_start">Start</string>
    <string name="btn_create_questions">Questions</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_go_to_result">Result</string>
    <string name="btn_close_test_result">Close</string>
    <string name="btn_backup">Backup</string>
    <string name="btn_recovery">Recovery</string>
    <string name="btn_next_question">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_save">Save</string>
    <string name="btn_settings">Settings</string>
    <string name="cb_exam_theme_contains_test">Test</string>
    <string name="cb_is_right_answer">True</string>
    <string name="rb_training">Training</string>
    <string name="rb_testing">Testing</string>
    <string name="msg_test_isnt_existed">A test is not available</string>
    <string name="msg_success_saving">Changes have been saved</string>
    <string name="msg_fail_saving">Fail to save changes</string>
    <string name="msg_fail_add_new_exam_theme">Fail to create a theme. Perhaps, it already exists.</string>
    <string name="msg_fail_edit_exam_theme">Fail to rename a theme. Perhaps, the theme with the same name already exists</string>
    <string name="msg_fail_loading_exam_themes">Fail to load exam themes</string>
    <string name="msg_zero_answers">There are should be at least one answer in a test question</string>
    <string name="msg_delete_exam_theme">If delete the chosen theme, her subthemes will also be deleted</string>
    <string name="msg_fail_delete_exam_theme">Fail to delete a test %s</string>
    <string name="msg_fail_loading_test">Fail to load a test</string>
    <string name="msg_right_answer">True</string>
    <string name="msg_wrong_answer">False</string>
    <string name="msg_do_editing_save">Save changes?</string>
    <string name="msg_test_time_ended">Time is over</string>
    <string name="msg_success_backup">Backup has been completed</string>
    <string name="msg_backup_sd_is_not_found">Fail to create a backup, because SD-card is not found</string>
    <string name="msg_fail_backup">Fail to complete a backup</string>
    <string name="msg_fail_permission_backup">Fail to make a backup without a permission to write on SD-card</string>
    <string name="msg_success_recovery">Recovery has been completed</string>
    <string name="msg_recovery_file_is_not_existed">No backup file was found</string>
    <string name="msg_fail_recovery">Fail to recover data</string>
    <string name="msg_fail_permission_recovery">Fail to recover data without a permission to read from SD-card</string>
    <string name="msg_recovery_data_will_remove">After a recovery current data will be lost. Continue?</string>
    <string name="msg_do_you_want_to_get_out_of_training">Are you sure that you want to exit the training?</string>
    <string name="msg_do_you_want_to_get_out_of_testing">Are you sure that you want to finish the test?</string>
    <string name="hint_test_description">Description</string>
    <string name="hint_question_text">Question</string>
    <string name="hint_question_explanation">Comment</string>
    <string name="hint_create_new_theme">Theme</string>
    <string name="hint_create_new_answer">Answer</string>
    <string name="title_delete_exam_theme">Deleting a theme</string>
    <string name="title_finish_editing">Finishing an edit</string>
    <string name="title_recovery">Recovery</string>
    <string name="title_finish_training">Finishing a training</string>
    <string name="title_finish_testing">Finishing a test</string>

    <string name="test_time_hours_default">00</string>
    <string name="test_time_minutes_default">20</string>
    <string name="test_time_seconds_default">00</string>
    
    <string name="cd_previous_page">Previous</string>
    <string name="cd_next_page">Next</string>
    <string name="cd_finish">Finish</string>
    <string name="cd_save">Save</string>
    <string name="cd_delete">Delete</string>
    <string name="cd_expand">Expand</string>
</resources>
