...
            <!-- Поле для ввода текста вопроса. -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_question"
                    android:hint="@string/etHint_question_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>
...
